ADD - planning section

--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
                     <div class="col-12 col-md-6 al-self-end">                     
                         <div class="card__header">
                             <img src="./img/planning2.png" alt="">
-                            <h2 class="planning__title">titolo</h2>
+                            <h2 class="planning__title">App development</h2>
                             <p>Lorem ipsum dolor sit amet, consect
                                 etur adipisicing elit. Odio, autem?
                             </p>
