ADD - partners section

--- a/index.html
+++ b/index.html
@@ -158,6 +158,60 @@
                 </div>
             </div>  
         </section>
+        <section class="partner">
+            <div class="container">
+                <div class="row">
+                    <div class="col-12 col-md-3">
+                        <div class="partner__header">
+                            <p>testimonials</p>
+                            <h2 class="partner__title">We are committed expert partners</h2>
+                            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+                                 Libero id ad, et iusto vel, odit aut sed quidem consequuntur natus sequi 
+                                 a voluptatibus magnam molestias architecto fuga laborum illo deleniti.
+                            </p>
+                        </div>
+                    </div>
+                    <div class="col-12 col-md-3">
+                        <div class="card">
+                            <div class="card__body">
+                                <img class="partner__image" src="./img/testimonial1.jpg" alt="">
+                            </div>
+                            <div class="card__header">
+                                <p>"Lorem ipsum dolor sit amet consectetur, adipisicing elit.
+                                     Suscipit molestias totam rem, et saepe, laudantium ab odio deleniti possimus nobis amet labore.
+                                      Est dolores a doloremque labore, odit inventore saepe."
+                                </p>
+                                <span class="firma">firma</span>
+                            </div>
+                        </div>
+                        <div class="card">
+                            <div class="card__body">
+                                <img class="partner__image" src="./img/testimonial2.jpg" alt="">
+                            </div>
+                            <div class="card__header">
+                                <p>"Lorem ipsum dolor sit amet consectetur, adipisicing elit.
+                                     Suscipit molestias totam rem, et saepe, laudantium ab odio deleniti possimus nobis amet labore.
+                                      Est dolores a doloremque labore, odit inventore saepe."
+                                </p>
+                                <span class="firma">firma</span>
+                            </div>
+                        </div>
+                        <div class="card">
+                            <div class="card__body">
+                                <img class="partner__image" src="./img/testimonial3.jpg" alt="">
+                            </div>
+                            <div class="card__header">
+                                <p>"Lorem ipsum dolor sit amet consectetur, adipisicing elit.
+                                     Suscipit molestias totam rem, et saepe, laudantium ab odio deleniti possimus nobis amet labore.
+                                      Est dolores a doloremque labore, odit inventore saepe."
+                                </p>
+                                <span class="firma">firma</span>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
     </main>
 </body>
 </html>
