ADD - why-us section

--- a/index.html
+++ b/index.html
@@ -212,6 +212,99 @@
                 </div>
             </div>
         </section>
+        <section class="why-us">
+            <div class="container">
+                <div class="why-us__header">
+                    <h2>Benefits of working with us</h2>
+                </div>
+                <div class="row">
+                    <div class="col-12 col-md-6 col-lg-4">
+                        <div class="card">
+                            <h2 class="why-us__list">01</h2>
+                            <h3 class="why-us_title">titolo</h3>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                                Nemo eius, perferendis facilis veritatis facere officia odit cupiditate ratio
+                                ne maiores laborum animi
+                                quia accusantium ex blanditiis debitis sunt vel sed deleniti!
+                            </p>
+                            <div>
+                            <a class="button button--lilac" href="#">more</a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-12 col-md-6 col-lg-4">
+                        <div class="card">
+                            <h2 class="why-us__list">01</h2>
+                            <h3 class="why-us_title">titolo</h3>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                                Nemo eius, perferendis facilis veritatis facere officia odit cupiditate ratio
+                                ne maiores laborum animi
+                                quia accusantium ex blanditiis debitis sunt vel sed deleniti!
+                            </p>
+                            <div>
+                            <a class="button button--lilac" href="#">more</a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-12 col-md-6 col-lg-4">
+                        <div class="card">
+                            <h2 class="why-us__list">01</h2>
+                            <h3 class="why-us_title">titolo</h3>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                                Nemo eius, perferendis facilis veritatis facere officia odit cupiditate ratio
+                                ne maiores laborum animi
+                                quia accusantium ex blanditiis debitis sunt vel sed deleniti!
+                            </p>
+                            <div>
+                            <a class="button button--lilac" href="#">more</a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-12 col-md-6 col-lg-4">
+                        <div class="card">
+                            <h2 class="why-us__list">01</h2>
+                            <h3 class="why-us_title">titolo</h3>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                                Nemo eius, perferendis facilis veritatis facere officia odit cupiditate ratio
+                                ne maiores laborum animi
+                                quia accusantium ex blanditiis debitis sunt vel sed deleniti!
+                            </p>
+                            <div>
+                            <a class="button button--lilac" href="#">more</a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-12 col-md-6 col-lg-4">
+                        <div class="card">
+                            <h2 class="why-us__list">01</h2>
+                            <h3 class="why-us_title">titolo</h3>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                                Nemo eius, perferendis facilis veritatis facere officia odit cupiditate ratio
+                                ne maiores laborum animi
+                                quia accusantium ex blanditiis debitis sunt vel sed deleniti!
+                            </p>
+                            <div>
+                            <a class="button button--lilac" href="#">more</a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-12 col-md-6 col-lg-4">
+                        <div class="card">
+                            <h2 class="why-us__list">01</h2>
+                            <h3 class="why-us_title">titolo</h3>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                                Nemo eius, perferendis facilis veritatis facere officia odit cupiditate ratio
+                                ne maiores laborum animi
+                                quia accusantium ex blanditiis debitis sunt vel sed deleniti!
+                            </p>
+                            <div>
+                            <a class="button button--lilac" href="#">more</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
     </main>
 </body>
 </html>
