ADD - about-us section

--- a/index.html
+++ b/index.html
@@ -305,6 +305,42 @@
                 </div>
             </div>
         </section>
+        <section class="about-us">
+            <div class="container">
+                <div class="row">
+                    <div class="col-12 col-md-6">
+                        <div class="card">
+                            <h2 class="about-us__title">About Us</h2>
+                            <p>
+                                Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                                Officia dignissimos, deleniti fuga excepturi laudantium sequi at, 
+                                modi nam voluptatum tempora reprehenderit.
+                                Quod ut tempora facilis perspiciatis, in nam commodi iure.
+                            </p>
+                            <p>
+                                Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                                Officia dignissimos, deleniti fuga excepturi laudantium sequi at, 
+                                modi nam voluptatum tempora reprehenderit.
+                                Quod ut tempora facilis perspiciatis, in nam commodi iure.
+                            </p>
+                        </div>
+                    </div>
+                    <div class="col-12 col-md-6">
+                        <div class="card">
+                            <img class="partner__image about-us__image" src="./img/about.jpg" alt="">
+                            <h3> Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                                Officia dignissimos, deleniti fuga excepturi laudantium sequi at, 
+                                modi nam voluptatum tempora reprehenderit.
+                                Quod ut tempora facilis perspiciatis, in nam commodi iure.
+                            </h3>
+                            <div>
+                                <a class="button button--lilac" href="#">Follow me on linkedin</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
     </main>
 </body>
 </html>
